--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,5 +1,7 @@
 	<header class="wrapper">
-			<h1 class="logo"><a href="/">IranOpenData</a></h1>
+			<h1 class="logo">
+				<a href="/"><img src="../assets/graphics/IOD-logo.png" alt="Iran Open Data" /></a>
+			</h1>
 	<nav>
 		<ul class="nav-list list-type-none">
 			<li class="nav-list_item"><a class="nav-link" href="/data/">Data</a></li>
