--- a/app/_layouts/data.html
+++ b/app/_layouts/data.html
@@ -90,6 +90,12 @@ layout: default
 				<div class="sort-filter">
 					<span class="sort-filter-header">Sort by</span>
 					<div class="dropdown-sm">Recent Updates</div>
+					<div class="dropdown-categories">
+						<ul class="list-type-none">
+							<li class="dropdown-categories-item">Alphabetically</li>
+							<li class="dropdown-categories-item">Alphabetically</li>
+						</ul>
+					</div>
 				</div>
 				<ul class="list-type-none">
 					<li class="population list-item-vertical">
@@ -179,8 +185,12 @@ layout: default
 					</li>
 				</ul>
 				<div class="pagination">
-					<ul>
-						<li></li>
+					<ul class="list-type-none">
+						<li class="list-item-pagination pagination-previous"><a href="">Previous</a></li>
+						<li class="list-item-pagination"><a class="pagination-link-active" href="">1</a></li>
+						<li class="list-item-pagination"><a href="">2</a></li>
+						<li class="list-item-pagination"><a href="">3</a></li>
+						<li class="list-item-pagination pagination-next"><a href="">Next</a></li>
 					</ul>
 				</div>
 			</div>
