--- a/app/_layouts/datasets.html
+++ b/app/_layouts/datasets.html
@@ -4,29 +4,29 @@ layout: default
 
 <section>
 	<div class="wrapper wrapper-content-sm">
-		<div>
+		<div class="housing-lg">
 			<span class="type-category type-category-lg">Housing</span>
 			<h1>Name of Individual Dataset</h1>
 			<p class="description-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam. Phasellus magna augue, rutrum vitae vulputate eget, mattis eget ante. Nulla tincidunt, dolor vel imperdiet hendrerit, nisi odio viverra dolor, et condimentum justo ex et urna.</p>
-			<dl class="metadata">
-				<dt>Source</dt>
-				<dd>Name of source</dd>
+			<dl class="metadata-lg">
+				<dt class="metadata-item metadata-item-header">Source</dt>
+				<dd class="metadata-item">Name of source</dd>
 
-				<dt>Dates</dt>
-				<dd>Jun 2010 - Jul 2016</dd>
+				<dt class="metadata-item metadata-item-header">Dates</dt>
+				<dd class="metadata-item">Jun 2010 - Jul 2016</dd>
 
-				<dt>Formats</dt>
-				<dd>CSV</dd>
-				<dd>XML</dd>
+				<dt class="metadata-item metadata-item-header">Formats</dt>
+				<dd class="metadata-item element-file-type element-file-type-lg">CSV</dd>
+				<dd class="metadata-item element-file-type element-file-type-lg">XML</dd>
 
-				<dt>ID</dt>
-				<dd>ID</dd>
+				<dt class="metadata-item metadata-item-header">ID</dt>
+				<dd class="metadata-item">ID</dd>
 
-				<dt>Methodology</dt>
-				<dd>Methodology</dd>
+				<dt class="metadata-item metadata-item-header">Methodology</dt>
+				<dd class="metadata-item">Methodology</dd>
 			</dl>
 			<a class="button" href="">Download Dataset</a>
-			<a class="button" href="">Share</a>
+			<a class="button button-secondary" href="">Share</a>
 		</div>
 		<div class="subsection">
 			<h2>Issues or Notes</h2>
@@ -36,27 +36,32 @@ layout: default
 	</div>
 </section>
 <section class="section-black section-black-last">
-	<div class="wrapper">
-		<h2>Projects Made With This Dataset</h2>
-		<ul>
-			<li>
-				<img src="">
-				<span>Population</span>
-				<h4>Name of Dataset</h4>
-				<dl>
-					<dt>Source:</dt>
-					<dd>Name of Source</dd>
-				</dl>
-			</li>
-			<li>
-				<img src="">
-				<span>Population</span>
-				<h4>Name of Dataset</h4>
-				<dl>
-					<dt>Source:</dt>
-					<dd>Name of Source</dd>
-				</dl>
-			</li>
-		</ul>
+	<div class="wrapper wrapper-content">
+		<h2 class="section-black-header">Projects Made With This Dataset</h2>
+		<div class="section-black-description">
+			<ul class="list-type-none">
+				<li class="list-item-block">
+					<a href=""><img src="../assets/graphics/usecase3.jpg"></a>
+					<span class="type-category">Population</span>
+					<h5 class="header-with-description"><a href="">Name of Dataset</a></h5>
+					<dl class="metadata">
+						<dt>Source:</dt>
+						<dd>Name of Source</dd>
+					</dl>
+				</li>
+				<li class="list-item-block">
+					<a href=""><img src="../assets/graphics/usecase2.jpg"></a>
+					<span class="type-category">Population</span>
+					<h5 class="header-with-description"><a href="">Name of Dataset</a></h5>
+					<dl class="metadata">
+						<dt>Source:</dt>
+						<dd>Name of Source</dd>
+					</dl>
+				</li>
+				<li>
+					<a class="icon-arrow-right" href="">Next</a>
+				</li>
+			</ul>
+		</div>
 	</div>
 </section>
