--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -3,7 +3,7 @@
 		<div class="wrapper-half wrapper-half-left">
 			<h5 class="header-with-description">Sign Up For Our Newsletter</h5>
 			<p>Get updates on new and updated datasets.</p>
-			<input type="" name="">
+			<input type="" name="" placeholder="Enter Your Email">
 			<button class="button button-sm button-secondary">Submit</button>
 		</div>
 		<div class="wrapper-half wrapper-half-right">
