--- a/app/_layouts/contact.html
+++ b/app/_layouts/contact.html
@@ -27,6 +27,7 @@ layout: default
 				<label class="label-form" for="message">Message</label>
 				<textarea></textarea>
 			</div>
+			<button class="button button-right">Submit</button>
 		</form>
 		<div class="subsection subsection-bold content-centered">
 			<h2 class="header-centered">Other Ways to Reach Out</h2>
