--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,19 +1,24 @@
 	<header class="wrapper">
-			<h1 class="logo">
-				<a href="/"><img src="../assets/graphics/IOD-logo.png" alt="Iran Open Data" /></a>
-			</h1>
-	<nav>
-		<ul class="nav-list list-type-none">
-			<li class="nav-list_item"><a class="nav-link" href="/data/">Data</a></li>
-			<li class="nav-list_item"><a class="nav-link" href="/usecases/">Use Cases</a></li>
-			<li class="nav-list_item"><a class="nav-link" href="/resources/">Resources</a></li>
-			<li class="nav-list_item"><a class="nav-link" href="/developers/">Developers</a></li>
-			<li class="nav-list_item"><a class="nav-link" href="/about/">About</a></li>
-			<li class="nav-list_item"><a class="nav-link" href="/contact/">Contact</a></li>
-		</ul>
-	</nav>
-	<ul class="nav-languages nav-list">
-		<li class="nav-list_item"><a class="nav-link active">English</a></li>
-		<li class="nav-list_item"><a class="nav-link">Persian</a></li>
-	</ul>
+		<h1 class="logo">
+			<a href="/"><img src="../assets/graphics/IOD-logo.png" alt="Iran Open Data" /></a>
+		</h1>
+		<div class="nav-container">
+			<span class="menu-hamburger" href="">Menu</span>
+			<div class="nav-mobile">
+				<nav>
+					<ul class="nav-list list-type-none">
+						<li class="nav-list_item"><a class="nav-link" href="/data/">Data</a></li>
+						<li class="nav-list_item"><a class="nav-link" href="/usecases/">Use Cases</a></li>
+						<li class="nav-list_item"><a class="nav-link" href="/resources/">Resources</a></li>
+						<li class="nav-list_item"><a class="nav-link" href="/developers/">Developers</a></li>
+						<li class="nav-list_item"><a class="nav-link" href="/about/">About</a></li>
+						<li class="nav-list_item"><a class="nav-link" href="/contact/">Contact</a></li>
+					</ul>
+				</nav>
+				<ul class="nav-languages nav-list list-type-none">
+					<li class="nav-list_item"><a class="nav-link active">English</a></li>
+					<li class="nav-list_item"><a class="nav-link">Persian</a></li>
+				</ul>
+			</div>
+		</div>
 	</header>
