add translation strings

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -9,12 +9,12 @@
 		<div class="wrapper-half wrapper-half-right">
 			<nav class="float-right">
 				<ul class="list-type-none">
-					<li class="nav-list_item"><a class="nav-link" href="/data/">Data</a></li>
-					<li class="nav-list_item"><a class="nav-link" href="/usecases/">Use Cases</a></li>
-					<li class="nav-list_item"><a class="nav-link" href="/resources/">Resources</a></li>
-					<li class="nav-list_item"><a class="nav-link" href="/developers/">Developers</a></li>
-					<li class="nav-list_item"><a class="nav-link" href="/about/">About</a></li>
-					<li class="nav-list_item"><a class="nav-link" href="/contact/">Contact</a></li>
+					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/data/">{{lang.data}}</a></li>
+					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/usecases/">{{lang.use_cases}}</a></li>
+					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/resources/">{{lang.resources}}</a></li>
+					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/developers/">{{lang.developers}}</a></li>
+					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/about/">{{lang.about}}</a></li>
+					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/contact/">{{lang.contact}}</a></li>
 				</ul>
 			</nav>
 			<a class="button button-sm float-right" href="">Find Us On Github</a>
