--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -10,6 +10,10 @@
 
 <!-- build:css /assets/styles/main.css -->
 <link rel="stylesheet" href="/assets/styles/main.css">
+
+{% if page.lang == 'fa' %}
+  <link rel="stylesheet" href="/assets/styles/main_rtl.css">
+{% endif %}
 <!-- endbuild -->
 
-</head>	
+</head>
