--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,19 +1,22 @@
+
+	{% assign lang = site.data[page.lang][0] %}
 	<header class="wrapper">
 			<h1 class="logo">
-				<a href="/"><img src="../assets/graphics/IOD-logo.png" alt="Iran Open Data" /></a>
+				<a href="/"><img src="/assets/graphics/IOD-logo.png" alt="Iran Open Data" /></a>
 			</h1>
 	<nav>
+
 		<ul class="nav-list list-type-none">
-			<li class="nav-list_item"><a class="nav-link" href="/data/">Data</a></li>
-			<li class="nav-list_item"><a class="nav-link" href="/usecases/">Use Cases</a></li>
-			<li class="nav-list_item"><a class="nav-link" href="/resources/">Resources</a></li>
-			<li class="nav-list_item"><a class="nav-link" href="/developers/">Developers</a></li>
-			<li class="nav-list_item"><a class="nav-link" href="/about/">About</a></li>
-			<li class="nav-list_item"><a class="nav-link" href="/contact/">Contact</a></li>
+			<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/data/">{{lang.data}}</a></li>
+			<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/usecases/">{{lang.use_cases}}</a></li>
+			<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/resources/">{{lang.resources}}</a></li>
+			<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/developers/">{{lang.developers}}</a></li>
+			<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/about/">{{lang.about}}</a></li>
+			<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/contact/">{{lang.contact}}</a></li>
 		</ul>
 	</nav>
 	<ul class="nav-languages nav-list">
-		<li class="nav-list_item"><a class="nav-link active">English</a></li>
-		<li class="nav-list_item"><a class="nav-link">Persian</a></li>
+		<li class="nav-list_item"><a href="/en" class="nav-link active">English</a></li>
+		<li class="nav-list_item"><a href="/fa" class="nav-link">فارسی</a></li>
 	</ul>
 	</header>
