cleaning responsive styles

--- a/app/_layouts/data.html
+++ b/app/_layouts/data.html
@@ -9,6 +9,7 @@ layout: default
 			<p class="description-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit metus. Vestibulum at mauris vestibulum, interdum quam id, egestas metus. In viverra elit id auctor pharetra.</p>
 		</div>
 		<div class="content-internal">
+			<a class="button button-filter" href="">Filter Datasets</a>
 			<div class="sidebar">
 				<h5>Filter Datasets</h5>
 				<form>
@@ -17,24 +18,29 @@ layout: default
 							<label class="header-filter">Category</label>
 							<ul class="list-type-none">
 								<li class="list-item-filter list-item-filter-housing">
-									<input type="checkbox" name="" id="" value="" />
-									<label class="list-item-filter-housing">Category Name <span>(2)</span></label>
+									<label>Category Name <span>(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
 								</li>
 								<li class="list-item-filter list-item-filter-population">
-									<input type="checkbox" name="" id="" value="" />
-									<label>Category Name <span>(2)</span></label>
+									<label>Category Name <span>(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
 								</li>
 								<li class="list-item-filter list-item-filter-women">
-									<input type="checkbox" name="" id="" value="" />
-									<label>Category Name <span>(2)</span></label>
+									<label>Category Name <span>(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
 								</li>
 								<li class="list-item-filter list-item-filter-trade">
-									<input type="checkbox" name="" id="" value="" />
-									<label>Category Name <span>(2)</span></label>
+									<label>Category Name <span>(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
 								</li>
 								<li class="list-item-filter list-item-filter-economy">
-									<input type="checkbox" name="" id="" value="" />
-									<label>Category Name <span>(2)</span></label>
+									<label>Category Name <span>(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
 								</li>
 							</ul>
 						</fieldset>
@@ -44,31 +50,19 @@ layout: default
 							<label class="header-filter">Format</label>
 							<ul class="list-type-none">
 								<li class="list-item-filter">
-									<input type="checkbox" name="" id="" value="" />
-									<label>CSV <span>(2)</span></label>
+									<label>CSV <span>(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
 								</li>
 								<li class="list-item-filter">
-									<input type="checkbox" name="" id="" value="" />
-									<label>XML <span>(2)</span></label>
+									<label>XML <span>(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
 								</li>
 								<li class="list-item-filter">
-									<input type="checkbox" name="" id="" value="" />
-									<label>JSON <span>(2)</span></label>
-								</li>
-							</ul>
-						</fieldset>
-					</div>
-					<div class="wrapper-filter-item">
-						<fieldset>
-							<label class="header-filter">Language</label>
-							<ul class="list-type-none">
-								<li class="list-item-filter">
-									<input type="checkbox" name="" id="" value="" />
-									<label>English <span>(2)</span></label>
-								</li>
-								<li class="list-item-filter">
-									<input type="checkbox" name="" id="" value="" />
-									<label>Farsi <span>(2)</span></label>
+									<label>JSON <span>(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
 								</li>
 							</ul>
 						</fieldset>
