--- a/app/_layouts/datasets.html
+++ b/app/_layouts/datasets.html
@@ -16,8 +16,10 @@ layout: default
 				<dd class="metadata-item">Jun 2010 - Jul 2016</dd>
 
 				<dt class="metadata-item metadata-item-header">Formats</dt>
-				<dd class="metadata-item element-file-type element-file-type-lg">CSV</dd>
-				<dd class="metadata-item element-file-type element-file-type-lg">XML</dd>
+				<dd class="metadata-item">
+					<span class="element-file-type element-file-type-lg">CSV</span>
+					<span class="element-file-type element-file-type-lg">XML</span>
+				</dd>
 
 				<dt class="metadata-item metadata-item-header">ID</dt>
 				<dd class="metadata-item">ID</dd>
