adding markdown pages

--- a/app/_layouts/resources.html
+++ b/app/_layouts/resources.html
@@ -10,7 +10,7 @@ layout: default
 			<a class="button" href="">View the API</a>
 			<a class="button button-secondary" href="">Find us on Github</a>
 		</div>
-		<div class="sidebar">
+		<div class="sidebar sidebar-fixed">
 			<h5>Jump to</h5>
 			<ul class="list-type-none">
 				<li class="list-item-filter">
