--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -3,16 +3,14 @@ layout: default
 ---
 
 <section>
-	<div class="wrapper wrapper-content wrapper-content-sm">
+	<div class="wrapper wrapper-content wrapper-content-sm wrapper-content-about">
 		<h1>About</h1>
-		<p class="description-md width-shortened-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh. Praesent quis sem mattis, ullamcorper ligula sed, venenatis metus. Maecenas ornare tempor eleifend. Vivamus eleifend congue erat, quis rhoncus leo semper ac. In efficitur justo eu mattis vestibulum. Nullam auctor dui eros, eu pharetra erat molestie eu. Sed in nisl risus. Aenean posuere quam ac sapien semper molestie. Nunc congue nulla mi, et consequat tellus dapibus ac. Fusce eget magna ante. Vestibulum quis varius libero. Proin ac tellus eu massa consequat fringilla quis id eros. Etiam laoreet fermentum nibh vel auctor. Cras sed ipsum ac nunc consequat interdum eu quis metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-		<div class="content-width-6">
-			<p class="description-md">Suspendisse ornare porttitor eros. Fusce eget enim eros. Quisque dignissim faucibus est, a fringilla tortor bibendum non. Fusce vitae ornare sem. Suspendisse ac libero ac lacus tempor congue et ac turpis. Maecenas sapien quam, faucibus vitae eros semper, aliquet egestas ligula. Nunc ultricies ante enim, mollis feugiat neque aliquet ac. In et nulla vel nisi condimentum tristique. Praesent nec enim lectus.</p>
-			<p class="description-md">Suspendisse ac libero ac lacus tempor congue et ac turpis. Maecenas sapien quam, faucibus vitae eros semper, aliquet egestas ligula. Nunc ultricies ante enim, mollis feugiat neque aliquet ac. In et nulla vel nisi condimentum tristique. Praesent nec enim lectus.</p>
-		</div>
+		{% for post in site.about | where:"lang",page.lang %}
+		  {{post.content}}
+		{% endfor %}
 		<div class="block-partners">
 			<h3>Partners</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh.</p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh.
 			<ul>
 				<li>Logo</li>
 				<li>Logo</li>
