--- a/app/_layouts/datasets.html
+++ b/app/_layouts/datasets.html
@@ -43,7 +43,7 @@ layout: default
 		<div class="section-black-description">
 			<ul class="list-type-none">
 				<li class="list-item-block">
-					<a href=""><img src="../assets/graphics/usecase3.jpg"></a>
+					<a href=""><img src="/assets/graphics/usecase3.jpg"></a>
 					<span class="type-category">Population</span>
 					<h5 class="header-with-description"><a href="">Name of Dataset</a></h5>
 					<dl class="metadata">
@@ -52,7 +52,7 @@ layout: default
 					</dl>
 				</li>
 				<li class="list-item-block">
-					<a href=""><img src="../assets/graphics/usecase2.jpg"></a>
+					<a href=""><img src="/assets/graphics/usecase2.jpg"></a>
 					<span class="type-category">Population</span>
 					<h5 class="header-with-description"><a href="">Name of Dataset</a></h5>
 					<dl class="metadata">
