--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -48,7 +48,7 @@ layout: default
 		<h2>Use Cases</h2>
 		<p class="description-md width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
 		<div class="feature-overlay">
-			<img class="img-feature" src="./assets/graphics/feature1.jpg">
+			<img class="img-feature" src="/assets/graphics/feature1.jpg">
 			<div class="overlay-description">
 				<span class="type-category">Featured</span>
 				<h5><a class="text-link" href="">Name of Dataset</a></h5>
