--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,7 +1,7 @@
 	{% assign lang = site.data[page.lang][0] %}
 	<header class="wrapper">
 		<h1 class="logo">
-			<a href="/"><img src="/assets/graphics/IOD-logo.png" alt="Iran Open Data" /></a>
+			<a href="/{{page.lang}}/"><img src="/assets/graphics/IOD-logo.png" alt="Iran Open Data" /></a>
 		</h1>
 		<nav>
 			<ul class="nav-list list-type-none">
@@ -13,7 +13,7 @@
 				<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/contact/">{{lang.contact}}</a></li>
 			</ul>
 		</nav>
-		<ul class="nav-languages nav-list">
+		<ul class="nav-languages nav-list list-type-none">
 			<li class="nav-list_item"><a href="/en" class="nav-link active">English</a></li>
 			<li class="nav-list_item"><a href="/fa" class="nav-link">فارسی</a></li>
 		</ul>
