styled pages so that all content reads RTL

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -17,7 +17,7 @@
 					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/contact/">{{lang.contact}}</a></li>
 				</ul>
 			</nav>
-			<a class="button button-sm float-right" href="">Find Us On Github</a>
+			<a class="button button-sm float-right button-standalone" href="">Find Us On Github</a>
 		</div>
 	</div>
 </footer>
