--- a/app/_layouts/data.html
+++ b/app/_layouts/data.html
@@ -197,7 +197,7 @@ layout: default
 			<h2 class="section-black-header">Don't see what you're looking for?</h2>
 			<div class="section-black-description">
 				<p class="description-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
-				<a class="button button-white" href="">Suggest a Dataset</a>
+				<a class="button button-white" href="/{{page.lang}}/contact/">Suggest a Dataset</a>
 			</div>
 		</div>
 	</div>
