--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
 			<div class="section-feature_main">
 				<h1 class="header-feature">Making Iranian Data Available to the Public</h1>
 				<p class="description-lg">Find clean, reliable data from housing to transportation. With our growing database, check back for updates or sign up for our newsletter, to see when new sets are added.</p>
-				<a class="button button-lg" href="">View All Datsets</a>
+				<a class="button button-lg" href="/{{page.lang}}/data/">View All Datsets</a>
 			</div>
 			<div class="section-feature_secondary">
 				<ul class="list-type-none">
@@ -39,8 +39,8 @@ layout: default
 			<h2 class="section-black-header">Our Methodology</h2>
 			<div class="section-black-description">
 				<p class="description-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam. Phasellus magna augue, rutrum vitae vulputate eget, mattis eget ante.</p>
-				<a class="button button-white" href="">Learn More</a>
-				<a class="button button-white button-secondary" href="">Contribute</a>
+				<a class="button button-white" href="/{{page.lang}}/about/">Learn More</a>
+				<a class="button button-white button-secondary" href="/{{page.lang}}/developers/">Contribute</a>
 			</div>
 		</div>
 	</section>
@@ -56,6 +56,6 @@ layout: default
 				<a class="normal-link" href="">View Site</a>
 			</div>
 		</div>
-		<a class="button" href="">View All Use Cases</a>
+		<a class="button" href="/{{page.lang}}/usecases/">View All Use Cases</a>
 	</div>
 </section>
