--- a/app/_layouts/usecases.html
+++ b/app/_layouts/usecases.html
@@ -51,7 +51,7 @@ layout: default
 			<h2 class="section-black-header">Show Us Your Work</h2>
 			<div class="section-black-description">
 				<p class="description-md">Have a project that you’ve build off of an Open Iran Data dataset? Send us your information so that we can feature it on the site.</p>
-				<a class="button button-white" href="">Send Your Project</a>
+				<a class="button button-white" href="/{{page.lang}}/contact/">Send Your Project</a>
 			</div>
 		</div>
 	</div>
