--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -16,8 +16,8 @@ layout: default
 			<h2 class="section-black-header">Get Involved</h2>
 			<div class="section-black-description">
 				<p class="description-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
-				<a class="button button-white" href="">Contact us</a>
-				<a class="button button-white button-secondary" href="">Find us on Github</a>
+				<a class="button button-white" href="/{{page.lang}}/contact/">Contact us</a>
+				<a class="button button-white button-secondary" href="https://github.com/orgs/iranopendata/">Find us on Github</a>
 			</div>
 		</div>
 	</div>
