--- a/app/_layouts/resources.html
+++ b/app/_layouts/resources.html
@@ -7,7 +7,7 @@ layout: default
 		<div class="feature-internal">
 			<h1>Resources</h1>
 			<p class="description-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit metus. Vestibulum at mauris vestibulum, interdum quam id, egestas metus. In viverra elit id auctor pharetra.</p>
-			<a class="button" href="">View the API</a>
+			<a class="button" href="https://github.com/orgs/iranopendata/">View the API</a>
 			<a class="button button-secondary" href="">Find us on Github</a>
 		</div>
 		<div class="sidebar sidebar-fixed">
